src/elements/content-sidebar/activity-feed/task-new/Task.scss
@import '../../../common/variables';

$success-color: $shady-acres;
$error-color: $red;
$assignment-avatar-spacing: 4px;
$card-left-offset: 40px;

@mixin avatar-badge-icon {
    background: $white;
    border: 1px solid $white;
    border-radius: 50%;
    bottom: 0;
    position: absolute;
    right: 0;
}

.bcs-task {
    opacity: 1;
    transition: opacity .33s;

    &.bcs-is-pending {
        opacity: .4;
    }

    .bcs-task-content {
        margin-left: $card-left-offset;
    }

    .bcs-task-due-date {
        color: $bdl-neutral-02;
        font-weight: bold;
        margin-top: 8px;

        span:first-child {
            padding-right: 3px;
        }

        &.bcs-task-overdue {
            color: $error-color;
        }
    }

    .bcs-task-assignments {
        display: flex;
        margin: 10px 0;
    }

    .bcs-task-assignment-avatar {
        height: 32px;
        width: 32px;
    }

    .bcs-task-avatar {
        height: 100%;
        position: relative;
    }

    .bcs-task-avatar-badge {
        @include avatar-badge-icon;

        right: 4px;
    }

    .bcs-task-assignment-count {
        align-items: center;
        background: $bdl-neutral-02;
        border-radius: 100%;
        color: #fff;
        cursor: pointer;
        display: flex;
        font-weight: bold;
        justify-content: center;
    }

    .bcs-task-status {
        align-items: center;
        display: flex;
        margin-top: 18px;
    }

    .bcs-task-status-icon {
        border: 1px solid $white;
        border-radius: 100%;
        bottom: 0;
        height: 14px;
        margin-right: 5px;
        width: 14px;

        &.completed,
        &.approved,
        &.rejected {
            background: $white;
        }

        &.pending,
        &.inProgress,
        &.notStarted {
            align-items: center;
            color: white;
            display: flex;
            font-size: 80%;
            font-weight: bold;
            justify-content: center;

            .fill-color {
                fill: $bdl-neutral-02;
            }
        }
    }

    .bcs-task-pending-assignment {
        margin-top: 5px;
    }

    .bcs-comment-user-name {
        margin-right: 0;
    }

    button:first-of-type.bcs-task-action-button {
        margin-left: 0;
    }
}

.bcs-task-assignment-tooltip-text {
    text-align: center;
}

.bcs-task-assignment-status {
    display: inline-block;
    height: 32px;
    position: relative;
    width: 32px;

    & + .bcs-task-assignment-status,
    & + .bcs-task-assignment-count-container {
        margin-left: $assignment-avatar-spacing;
    }
}

.bcs-task-assignment-status-icon {
    @include avatar-badge-icon;
}

.bcs-task-assignment-list-flyout {
    max-width: 100%;
    width: 280px;

    // reset base styles set by ui-elements
    ul {
        margin: 0;
        padding: 0;
    }
}

.bcs-task-assignment-list {
    max-height: 215px;
    overflow: hidden auto;
    overflow-y: overlay; // nicer scroll bar for Blink engines only
}

.bcs-task-assignment-list-title {
    font-size: 15px;
    margin: 0 0 12px 0;
}

.bcs-task-assignment-list-item {
    align-items: flex-start;
    display: flex;
    margin: 6px 0 0 0;
    padding: 3px 0;
}

.bcs-task-assignment-list-item-avatar {
    margin-right: 10px;
}

.bcs-task-assignment-list-item-details {
    line-height: 16px;
}

.bcs-task-assignment-list-item-status {
    color: $bdl-neutral-02;
}

